--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Install Dependencies (Monorepo)
         run: npm install
 
-      - name: Build Design System Library
+      - name: Build React Native Design System
         run: npm run build
-        working-directory: ./packages/design-system  # Corrected path
+        working-directory: ./packages/react-native  # Updated path
 
       - name: Install and Link Library with Yalc
         run: |
           npm install -g yalc
-          cd packages/design-system
+          cd packages/react-native  # Updated path
           yalc publish
           cd ../../apps/react-native-doc
           yalc add @sf-digital-ui/react-native
