--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -15,6 +15,7 @@
 		"yalc-link": "yalc link @sf-digital-ui/react-native"
 	},
 	"dependencies": {
+		"@expo-google-fonts/lato": "^0.2.3",
 		"@expo/vector-icons": "^14.0.2",
 		"@react-navigation/drawer": "^7.1.1",
 		"@react-navigation/native": "^7.0.14",
