--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,12 +1,10 @@
 {
 	"name": "@sf-digital-ui/react-native",
-	"version": "2.2.5",
+	"version": "2.2.6",
 	"main": "dist/index.js",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"license": "MIT",
 	"scripts": {
 		"build": "tsup src/index.tsx --format esm,cjs --dts",
