--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -31,6 +31,7 @@
 		"typescript": "^5.6.3"
 	},
 	"dependencies": {
-		"expo-checkbox": "^4.0.1"
+		"expo-checkbox": "^4.0.1",
+		"lucide-react-native": "^0.488.0"
 	}
 }
