--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -30,6 +30,7 @@
 		"expo-status-bar": "~2.0.0",
 		"expo-system-ui": "~4.0.8",
 		"expo-web-browser": "~14.0.1",
+		"lucide-react-native": "^0.488.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-native": "0.76.7",
