--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -23,6 +23,7 @@
 		"@sf-digital-ui/react-native": "file:.yalc/@sf-digital-ui/react-native",
 		"@sf-digital-ui/tokens": "^3.3.4",
 		"expo": "^53.0.9",
+		"expo-checkbox": "^4.1.4",
 		"expo-font": "~13.3.1",
 		"expo-linking": "~7.1.5",
 		"expo-router": "~5.0.7",
