--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -22,19 +22,19 @@
 		"@ronradtke/react-native-markdown-display": "^8.0.0",
 		"@sf-digital-ui/react-native": "file:.yalc/@sf-digital-ui/react-native",
 		"@sf-digital-ui/tokens": "^3.3.4",
-		"expo": "^53.0.9",
+		"expo": "^53.0.22",
 		"expo-checkbox": "^4.1.4",
 		"expo-font": "~13.3.1",
 		"expo-linking": "~7.1.5",
 		"expo-router": "~5.0.7",
-		"expo-splash-screen": "~0.30.8",
+		"expo-splash-screen": "^0.30.10",
 		"expo-status-bar": "~2.2.3",
 		"expo-system-ui": "~5.0.7",
 		"expo-web-browser": "~14.1.6",
 		"lucide-react-native": "^0.511.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
-		"react-native": "0.79.2",
+		"react-native": "^0.79.2",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-reanimated": "~3.17.4",
 		"react-native-safe-area-context": "5.4.0",
