--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "@sf-digital-ui/react",
-	"version": "4.12.0",
+	"version": "4.12.1",
 	"description": "",
 	"main": "./dist/index.js",
 	"style": "./dist/output.css",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-		"dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch"
+		"build": "postcss src/index.css -o dist/output.css && tsup src/index.tsx --format esm,cjs --dts --external react",
+		"dev": "concurrently --kill-others \"postcss src/index.css -o dist/output.css --watch\" \"tsup src/index.tsx --format esm,cjs --dts --external react --watch\""
 	},
 	"keywords": [],
 	"author": "",
@@ -18,6 +18,7 @@
 		"@sf-digital-ui/ts-config": "*",
 		"@tailwindcss/postcss": "^4.1.17",
 		"postcss": "^8.4.49",
+		"postcss-cli": "^11.0.0",
 		"tailwindcss": "^4.1.17",
 		"tsup": "^8.3.5",
 		"typescript": "^5.7.2"
